A bunch of small changes and hw2 post 1

--- a/_posts/cs285/2021-01-25-hw1-03-homework.md
+++ b/_posts/cs285/2021-01-25-hw1-03-homework.md
@@ -1,6 +1,6 @@
 ---
 title: "Homework 1"
-permalink: "cs285/hw1/solutions"
+permalink: cs285/hw1/solutions
 date: 2021-01-25T09:00:0-04:00
 excerpt: "Summary of my work on homework 1"
 categories:
